# gambit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c
lib/glad/include/glad/: gl.h
lib/imgui-1.86/: CMakeLists.txt
lib/imgui-docking/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
lib/imgui-docking/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
lib/imgui-docking/misc/fonts/: binary_to_compressed_c.cpp
lib/lest-1.35.1/: CHANGES.txt  README.md
lib/lest-1.35.1/include/lest/: lest.hpp  lest_basic.hpp  lest_cpp03.hpp  lest_decompose.hpp
lib/miniaudio/: CMakeLists.txt  LICENSE.txt  miniaudio.c
src/: CMakeLists.txt
src/common/: Bits.hpp  Buffer.hpp  CMakeLists.txt  File.hpp  Heap.hpp  INIParser.cpp  INIParser.hpp  Log.cpp  Log.hpp  Operations.hpp  Pattern.hpp  RingBuffer.hpp  StringUtils.hpp  Types.hpp  Utilities.hpp  Version.hpp.in
src/core/: CMakeLists.txt  DMA.hpp  GBA.cpp  GBA.hpp  Keypad.cpp  Keypad.hpp  Scheduler.cpp  Scheduler.hpp  Timer.cpp  Timer.hpp
src/core/cpu/: CPU.cpp  CPU.hpp  Types.hpp
src/core/cpu/arm/: Arm.cpp  Arm.hpp  Disassembly.cpp  Disassembly.hpp  Dissasembly.cpp  Handlers.cpp  Handlers.inl  Instruction.cpp  Instruction.hpp
src/core/cpu/thumb/: Disassembly.cpp  Disassembly.hpp  Handlers.cpp  Handlers.inl  Instruction.cpp  Instruction.hpp
src/core/debug/: Debugger.cpp  Debugger.hpp
src/core/mem/: Bus.cpp  Bus.hpp  GamePak.cpp  GamePak.hpp
src/core/ppu/: Backgrounds.cpp  Backgrounds.hpp  PPU.cpp  PPU.hpp
src/emulator/: CMakeLists.txt
src/emulator/core/: CMakeLists.txt  DMA.cpp  DMA.hpp  GBA.cpp  GBA.hpp  Keypad.cpp  Keypad.hpp  SIO.cpp  SIO.hpp  Scheduler.cpp  Scheduler.hpp  Timer.cpp  Timer.hpp
src/emulator/core/apu/: APU.cpp  APU.hpp
src/emulator/core/apu/channels/: NoiseChannel.cpp  NoiseChannel.hpp  PulseChannel.cpp  PulseChannel.hpp  WaveChannel.cpp  WaveChannel.hpp
src/emulator/core/cpu/: CPU.cpp  CPU.hpp  FunctionMap.hpp  Names.hpp  Types.hpp
src/emulator/core/cpu/arm/: Disassembly.cpp  Disassembly.hpp  Dissasembly.cpp  Dissasembly.hpp  Handlers.cpp  Handlers.inl  Instruction.cpp  Instruction.hpp
src/emulator/core/cpu/thumb/: Disassembly.cpp  Disassembly.hpp  Handlers.cpp  Handlers.inl  Instruction.cpp  Instruction.hpp
src/emulator/core/debug/: DebugInterface.cpp  DebugInterface.hpp  Debugger.cpp  Debugger.hpp
src/emulator/core/mem/: Bus.cpp  Bus.hpp  EEPROM.cpp  EEPROM.hpp  GamePak.cpp  GamePak.hpp  Types.hpp
src/emulator/core/mem/gpio/: GPIO.cpp  GPIO.hpp
src/emulator/core/mem/save/: EEPROM.cpp  EEPROM.hpp  Flash.cpp  Flash.hpp  SRAM.cpp  SRAM.hpp  Save.cpp  Save.hpp
src/emulator/core/movie/: BK2Loader.cpp  BK2Loader.hpp  VBMLoader.cpp  VBMLoader.hpp
src/emulator/core/ppu/: Backgrounds.cpp  Backgrounds.hpp  Drawing.cpp  Drawing.hpp  PPU.cpp  PPU.hpp  Types.hpp
src/emulator/device/: AudioDevice.hpp  InputDevice.hpp  VideoDevice.hpp
src/frontend/: Application.cpp  Application.hpp  CMakeLists.txt  DebuggerUI.hpp  EmuThread.cpp  EmuThread.hpp  Frontend.cpp  Frontend.hpp  Settings.hpp  Types.hpp  main.cpp
src/frontend/device/: GLFWInputDevice.cpp  GLFWInputDevice.hpp  MAAudioDevice.cpp  MAAudioDevice.hpp  OGLVideoDevice.cpp  OGLVideoDevice.hpp
src/frontend/fonts/: NotoSansMonoMedium.hpp  RubikRegular.hpp
src/frontend/res/: hack_regular.hpp
src/frontend/ui/: AboutWindow.cpp  AboutWindow.hpp  CPUDebugWindow.cpp  CPUDebugWindow.hpp  Common.cpp  Common.hpp  MetricsWindow.cpp  MetricsWindow.hpp  Window.cpp  Window.hpp
src/tests/: CMakeLists.txt  Tests.hpp  main.cpp  testmain.cpp
src/tests/common/: PatternTests.hpp
src/tests/core/arm/: DecodeTests.hpp  Disassembly.hpp  DisassemblyTests.hpp
src/tests/core/thumb/: DecodeTests.hpp  DisassemblyTests.hpp
